<resources>
    <string name="app_name">Laravel News App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="large_text">large text</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_about_laravel_news">Laravel News App</string>
    <string name="pref_title_about_developer">Developer</string>


    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <!--Themes-->
    <string-array name="pref_theme_titles">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>light</item>
        <item>dark</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_description_dark_theme">Use a theme variant of the App</string>
    <string name="pref_title_dark_theme">Choose Application Theme</string>
    <string name="archived">Archived</string>
    <string name="tutorials">Tutorials</string>
    <string name="packages">Packages</string>
    <string name="other">Other</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="favourite">Favourites</string>
    <string name="title_activity_about">About</string>
    <string name="activity_about_description">Laravel News is the official blog of Laravel. Every day bringing you the latest news, tutorials, and packages for the framework.
    Laravel News App is a mobile app bringing you the latest posts from Laravel News and is in no way associated with Laravel News.
    </string>
    <string name="activity_about_developer_description">James Dube</string>
    <string name="about">About</string>
    <string name="emptyViewTitleArchived">No Archived Posts</string>
    <string name="emptyViewDescriptionArchived">swipe an article left to archive it.</string>
    <string name="emptyViewTitleFavourite">No Favourite Posts</string>
    <string name="emptyViewDescriptionFavourite">click the heart icon to favourite a post</string>
    <string name="emptyViewTitleDefault">No Posts</string>
    <string name="emptyViewDescriptionDefault">swipe down to refesh</string>
</resources>
