<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <PreferenceCategory
        android:title="Notifications">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />

    </PreferenceCategory>

    <android.preference.PreferenceCategory
        android:title="Data and Sync">

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="180"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:key="sync_frequency"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sync_frequency" />

        <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
             design guidelines. -->
        <Preference android:title="@string/pref_title_system_sync_settings">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference>
    </android.preference.PreferenceCategory>

    <PreferenceCategory
        android:title="Theme">
        <ListPreference
            android:defaultValue="light"
            android:entries="@array/pref_theme_titles"
            android:entryValues="@array/pref_theme_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:key="pref_theme"
            android:summary="@string/pref_description_dark_theme"
            android:title="@string/pref_title_dark_theme" />
    </PreferenceCategory>


</PreferenceScreen>
